--- a/view.html
+++ b/view.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" href="favicon.ico"/>
 
-    <link href='http://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic|Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Arvo:400,700,400italic,700italic|Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <!--<link href='css/fonts.css' rel='stylesheet' type='text/css'/>-->
     <link rel="stylesheet" href="jslib/codemirror-4.5/lib/codemirror.css"/>
     <link rel="stylesheet" href="css/worksheet.css"/>
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/viewer.css"/>
 
     <script type="text/javascript"
-            src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_SVG-full.js&delayStartupUntil=configured"></script>
+            src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_SVG-full.js&delayStartupUntil=configured"></script>
     <script type="text/javascript" src="jslib/marked/marked.min.js"></script>
     <script type="text/javascript" src="jslib/codemirror-4.5/lib/codemirror.js"></script>
     <script type="text/javascript" src="jslib/codemirror-4.5/addon/runmode/runmode.js"></script>
